# cookiecutter-nionswift-plug-in

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: CHANGES.rst  README.rst  meta.yaml  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/.github/workflows/: python-package.yml
{{cookiecutter.repo_name}}/nionswift_plugin/{{cookiecutter.lib_name}}_ui/: MenuItem.py  __init__.py
{{cookiecutter.repo_name}}/nionswift_plugin/{{cookiecutter.lib_name}}_ui/test/: PlugIn_test.py
{{cookiecutter.repo_name}}/{{cookiecutter.org_name}}/{{cookiecutter.lib_name}}/: Processing.py
{{cookiecutter.repo_name}}/{{cookiecutter.org_name}}/{{cookiecutter.lib_name}}/resources/: ProcessingData.json
{{cookiecutter.repo_name}}/{{cookiecutter.org_name}}/{{cookiecutter.lib_name}}/test/: Processing_test.py
