[metadata]
name = {{cookiecutter.repo_name}}
version = 0.1.0
author = {{cookiecutter.author}}
description = Library and UI for processing with Nion Swift.
long_description = file: README.rst, CHANGES.rst
url = https://github.com/{{cookiecutter.github_organization}}/{{cookiecutter.repo_name}}
license = GPL-3.0-only
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find_namespace:
python_requires = >=3.11
install_requires =
    nionswift>=16.14.0,<17.0.0
tests_require =
    nionswift
    numpy>=2.0,<3.0

[options.package_data]
{{cookiecutter.org_name}}.{{cookiecutter.lib_name}} =
    resources/*

[options.packages.find]
include =
    nion
    {{cookiecutter.org_name}}.{{cookiecutter.lib_name}}
    {{cookiecutter.org_name}}.{{cookiecutter.lib_name}}.test
    nionswift_plugin
    nionswift_plugin.{{cookiecutter.lib_name}}_ui
    nionswift_plugin.{{cookiecutter.lib_name}}_ui.test
